drm/dp/mst: fix kernel oops when turning off secondary monitor

100% reproducible issue found on SKL SkullCanyon NUC with two external
DP daisy-chained monitors in DP/MST mode. When turning off or changing
the input of the second monitor the machine stops with a kernel
oops. This issue happened with 4.8.8 as well as drm/drm-intel-nightly.

This issue is traced to an inconsistent control flow in
drm_dp_update_payload_part1(): the 'port' pointer is set to NULL at
the same time as'req_payload.num_slots' is set to zero, but the pointer
is dereferenced even when req_payload.num_slot is zero.

Fix by adding test condition to make sure both variables
are used consistently. This removes the kernel oops.

There are still annoying cases where the primary display goes black
when the secondary display is turned off but it can be recovered from
by playing with the monitor inputs and power buttons.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=98990
Signed-off-by: Pierre-Louis Bossart <pierre-louis.bossart@linux.intel.com>